<?xml version="1.0"?>
<package>
  <name>node_example</name>
  <version>0.0.1</version>
  <description>
    Example nodes to show how to set up publishers and subscribers in C++
    using classes
  </description>

  <maintainer email="latadmin@todo.todo">latadmin</maintainer>
  <maintainer email="redbaronqueen@gmail.com">Aleksandar Vladimirov Atanasov</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>
